# omnizk

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/codegen/: Cargo.toml
crates/codegen-midenvm/: Cargo.toml
crates/codegen-midenvm/src/: codegen.rs  config.rs  error.rs  lib.rs  memory.rs  target.rs
crates/codegen-midenvm/src/codegen/: emit.rs  inst_buf.rs  miden_inst.rs  sem_tests.rs
crates/codegen-midenvm/src/codegen/emit/: emit_instr.rs
crates/codegen-midenvm/src/codegen/sem_tests/: add.rs  block.rs  fib.rs  func_call.rs  locals.rs  pub_inputs.rs  pub_outputs.rs  smoke.rs
crates/codegen-midenvm/src/codegen/sem_tests/block/: loop_in_block.rs  one_block.rs  one_block_br.rs  one_block_br_if.rs
crates/codegen-midenvm/tests/: add.rs  fib.rs  func_call.rs  globals_set_get.rs  pub_inputs.rs  pub_outputs.rs  sem_tests.rs  smoke.rs
crates/codegen-midenvm/tests/block/: loop_in_block.rs  loop_single.rs  loop_with_block.rs  nested_block.rs  nested_block_br.rs  nested_block_br_if.rs  one_block.rs  one_block_br.rs  one_block_br_if.rs
crates/codegen-midenvm/tests/locals/: locals_func_exit.rs
crates/codegen-shared/: Cargo.toml
crates/codegen-shared/src/: error.rs  lib.rs  target.rs  util.rs
crates/codegen-tritonvm/: Cargo.toml
crates/codegen-tritonvm/src/: codegen.rs  config.rs  emit.rs  error.rs  lib.rs  target.rs  ty.rs
crates/codegen-tritonvm/src/codegen/: emit.rs  inst_buf.rs  pseudo_inst.rs  sem_tests.rs
crates/codegen-tritonvm/src/codegen/sem_tests/: add.rs  block.rs  fib.rs  func_call.rs  locals.rs
crates/codegen-tritonvm/src/codegen/sem_tests/block/: loop_in_block.rs  loop_single.rs  loop_with_block.rs  nested_block.rs  nested_block_br.rs  nested_block_br_if.rs  one_block.rs  one_block_br.rs  one_block_br_if.rs
crates/codegen-tritonvm/src/codegen/sem_tests/locals/: locals_func_exit.rs  locals_set_get.rs
crates/codegen-valida/: Cargo.toml
crates/codegen-valida/src/: codegen.rs  config.rs  error.rs  lib.rs  target.rs
crates/codegen-valida/src/codegen/: emit.rs  miden_inst.rs  valida_inst_builder.rs
crates/codegen-valida/src/codegen/emit/: emit_instr.rs
crates/codegen-valida/tests/: add.rs  fib.rs  func_call.rs  pub_inputs.rs  pub_outputs.rs  sem_tests.rs  smoke.rs
crates/codegen-valida/tests/block/: one_block.rs
crates/codegen-valida/tests/locals/: locals_set_get.rs
crates/codegen/src/: codegen.rs  config.rs  error.rs  lib.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: compile.rs  error.rs  lib.rs
crates/dialects/miden/: Cargo.toml
crates/dialects/miden/src/: attributes.rs  lib.rs  ops.rs  types.rs
crates/dialects/ozk/: Cargo.toml
crates/dialects/ozk/src/: attributes.rs  lib.rs  op_builder.rs  ops.rs  ord_n.rs  types.rs
crates/dialects/valida/: Cargo.toml
crates/dialects/valida/src/: attributes.rs  lib.rs  op_interfaces.rs  ops.rs  types.rs
crates/dialects/wasm/: Cargo.toml
crates/dialects/wasm/src/: attributes.rs  lib.rs  op_builder.rs  op_interfaces.rs  ops.rs  types.rs
crates/frontend/: Cargo.toml
crates/frontend-clif/: Cargo.toml
crates/frontend-clif/src/: code_translator.rs  config.rs  func_builder.rs  func_op_builder.rs  lib.rs  mod_builder.rs  module_translator.rs
crates/frontend-shared/: Cargo.toml
crates/frontend-shared/src/: func_builder.rs  inst_builder.rs  lib.rs  mod_builder.rs  rust_wasm_tests.rs
crates/frontend-shared/src/mod_builder/: import_func_body.rs  import_func_resolver.rs
crates/frontend-wasm/: Cargo.toml
crates/frontend-wasm/src/: code_translator.rs  config.rs  error.rs  func_builder.rs  inst_builder.rs  lib.rs  mod_builder.rs  module_translator.rs  op_builder.rs  types.rs
crates/frontend-wasm/src/mod_builder/: import_func_body.rs
crates/frontend/src/: config.rs  error.rs  func_builder.rs  lib.rs  translate.rs
crates/ir/: Cargo.toml
crates/ir-transform/: Cargo.toml
crates/ir-transform/src/: and_minus_8.rs  convert_blocks.rs  dce_unused_functions.rs  globals_to_mem.rs  lib.rs  locals_to_mem.rs  miden.rs  pseudo_op_and.rs  pseudo_op_sub.rs  save_stack_pub_inputs.rs  tests_util.rs  triton.rs  valida.rs  wasm.rs
crates/ir-transform/src/miden/: convert_blocks.rs  lowering.rs
crates/ir-transform/src/miden/lowering/: arith_op_lowering.rs  call_op_lowering.rs  cf_lowering.rs  constant_op_lowering.rs
crates/ir-transform/src/miden/lowering/cf_lowering/: call_op_lowering.rs
crates/ir-transform/src/triton/: convert_blocks.rs
crates/ir-transform/src/valida/: lowering.rs  track_pc.rs
crates/ir-transform/src/valida/lowering/: arith_op_lowering.rs  constant_op_lowering.rs  func_lowering.rs  module_lowering.rs  resolve_target_sym_to_pc.rs
crates/ir-transform/src/wasm/: explicit_func_args.rs  explicit_func_args_pass.rs  globals_to_mem.rs  resolve_call_op.rs  track_stack_depth.rs
crates/ir/src/: entities.rs  ir.rs  lib.rs  pass.rs
crates/ir/src/ir/: func.rs  inst.rs  layout.rs  module.rs  module_info.rs  primitives.rs  ty.rs
crates/ir/src/ir/inst/: ext.rs
crates/ir/src/ir/inst/ext/: miden.rs  triton.rs
crates/rust-wasm-tests-helper/: Cargo.toml
crates/rust-wasm-tests-helper/src/: lib.rs
crates/rust-wasm-tests/add/: Cargo.toml
crates/rust-wasm-tests/add-bin/: Cargo.toml
crates/rust-wasm-tests/add/src/: add.rs  lib.rs
crates/rust-wasm-tests/bundle1/: Cargo.toml
crates/rust-wasm-tests/bundle1-bin/: Cargo.toml
crates/rust-wasm-tests/bundle1/src/: add.rs  fib.rs  lib.rs  main.rs
crates/rust-wasm-tests/fib/: Cargo.toml
crates/rust-wasm-tests/fib-bin/: Cargo.toml
crates/rust-wasm-tests/fib/src/: fib.rs  lib.rs
crates/stdlib/: Cargo.toml
crates/stdlib/src/: io_native.rs  io_wasm.rs  lib.rs
crates/tritonvm/: Cargo.toml
crates/wasm/: Cargo.toml
crates/wasm/src/: code_translator.rs  config.rs  error.rs  lib.rs  module_trans_env.rs  module_translator.rs  types.rs
crates/wasm2trvm/: Cargo.toml
crates/wasm2trvm/src/: lib.rs
crates/wasm2zk-tritonvm/: Cargo.toml
crates/wasm2zk-wasmparser/: Cargo.toml
crates/wasm2zk-wasmparser/src/: lib.rs
rust_wasm/: min-wasm.wasm
(+2 files in other folders)
