[workspace]
members = [
  "crates/wasm",
  "crates/codegen-tritonvm",
  "crates/ir",
  "crates/ir-transform",
  "crates/frontend",
  "crates/codegen",
  "crates/codegen-shared",
  "crates/compiler",
  "crates/stdlib",
  "crates/rust-wasm-tests/fib",
  "crates/rust-wasm-tests/add",
  "crates/rust-wasm-tests-helper",
]
exclude = ["crates/rust-wasm-tests/fib-bin", "crates/rust-wasm-tests/add-bin"]
resolver = "2"

[workspace.package]
authors = ["Denys Zadorozhny <denys@zadorozhnyi.com>"]
repository = "https://github.com/greenhat/c2zk"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
keywords = ["wasm", "webassembly", "zk", "proof", "verification"]
categories = ["wasm", "no-std", "virtualization"]

[workspace.dependencies]
c2zk-wasm = { path = "crates/wasm" }
c2zk-ir = { path = "crates/ir" }
c2zk-ir-transform = { path = "crates/ir-transform" }
c2zk-frontend = { path = "crates/frontend" }
c2zk-frontend-shared = { path = "crates/frontend-shared" }
c2zk-codegen = { path = "crates/codegen" }
c2zk-codegen-shared = { path = "crates/codegen-shared" }
c2zk-codegen-tritonvm = { path = "crates/codegen-tritonvm" }
c2zk-stdlib = { path = "crates/stdlib" }
c2zk-rust-wasm-tests-fib = { path = "crates/rust-wasm-tests/fib" }
c2zk-rust-wasm-tests-add = { path = "crates/rust-wasm-tests/add" }
c2zk-rust-wasm-tests-helper = { path = "crates/rust-wasm-tests-helper" }
wasmparser = { version = "0.94", features = ["deterministic"] }
log = { version = "0.4.8", default-features = false }
smallvec = { version = "1.6.1", features = ["union"] }
wat = "1.0.49"
wasmprinter = "0.2"
target-lexicon = { version = "0.12.3", default-features = false }
derive_more = "0.99"
thiserror = "1.0"
lazy_static = "1.4.0"
spin = "0.9.4"
itertools = "0.10.5"
