[workspace]
members = [
  "crates/codegen-tritonvm",
  "crates/codegen-midenvm",
  "crates/ir",
  "crates/dialects/ozk",
  "crates/dialects/wasm",
  "crates/ir-transform",
  "crates/frontend",
  "crates/frontend-shared",
  "crates/frontend-wasm",
  "crates/codegen",
  "crates/codegen-shared",
  "crates/compiler",
  "crates/stdlib",
  "crates/rust-wasm-tests/bundle1",
  "crates/rust-wasm-tests-helper",
]
exclude = ["crates/rust-wasm-tests/bundle1-bin"]
resolver = "2"

[workspace.package]
authors = ["Denys Zadorozhny <denys@zadorozhnyi.com>"]
repository = "https://github.com/greenhat/c2zk"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
keywords = ["wasm", "webassembly", "zk", "proof", "verification"]
categories = ["wasm", "no-std", "virtualization"]

[workspace.dependencies]
ozk-ozk-dialect = { path = "crates/dialects/ozk" }
ozk-wasm-dialect = { path = "crates/dialects/wasm" }
c2zk-ir = { path = "crates/ir" }
c2zk-ir-transform = { path = "crates/ir-transform" }
c2zk-frontend = { path = "crates/frontend" }
c2zk-frontend-shared = { path = "crates/frontend-shared" }
ozk-frontend-wasm = { path = "crates/frontend-wasm" }
c2zk-codegen = { path = "crates/codegen" }
c2zk-codegen-shared = { path = "crates/codegen-shared" }
c2zk-codegen-tritonvm = { path = "crates/codegen-tritonvm" }
c2zk-stdlib = { path = "crates/stdlib" }
c2zk-rust-wasm-tests-bundle1 = { path = "crates/rust-wasm-tests/bundle1" }
c2zk-rust-wasm-tests-helper = { path = "crates/rust-wasm-tests-helper" }
wasmparser = { version = "0.102" }
log = { version = "0.4.8", default-features = false }
smallvec = { version = "1.6.1", features = ["union"] }
wat = "1.0.49"
wasmprinter = "0.2"
target-lexicon = { version = "0.12.3", default-features = false }
derive_more = "0.99"
thiserror = "1.0.40"
lazy_static = "1.4.0"
spin = "0.9.4"
itertools = "0.10.5"
indexmap = "1.9"
topological-sort = "0.2"
pliron = { git = "https://github.com/greenhat/pliron", rev = "28a177519e29315575c5133d6416739f233fe857" }
