[package]
name = "c2zk-codegen-shared"
version = "0.1.0"
description = "Common codegen code for c2zk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
c2zk-ir = { workspace = true }
ozk-wasm-dialect = { workspace = true }
pliron = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
