[package]
name = "c2zk-codegen-tritonvm"
version = "0.1.0"
description = "Triton VM backend for c2zk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
c2zk-ir = { workspace = true }
c2zk-codegen-shared = { workspace = true }
triton-vm = { path = "../../../triton-vm/triton-vm" }
twenty-first = { version = "0.5.0" }

[dev-dependencies]
c2zk-frontend = { workspace = true }
c2zk-rust-wasm-tests-helper = { workspace = true }
c2zk-rust-wasm-tests-bundle1 = { workspace = true }
wat = { workspace = true }
wasmprinter = { workspace = true }
expect-test = "1.0.1"
