[package]
name = "ozk-codegen-tritonvm"
version = "0.1.0"
description = "Triton VM backend for ozk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ozk-ir-transform = { workspace = true }
ozk-wasm-dialect = { workspace = true }
pliron = { workspace = true }
# triton-vm = { path = "../../../triton-vm/triton-vm" }
# triton-opcodes = { path = "../../../triton-vm/triton-opcodes" }
triton-vm = { version = "0.19" }
triton-opcodes = { version = "0.19" }
twenty-first = { version = "0.19" }

[dev-dependencies]
ozk-frontend-wasm = { workspace = true }
ozk-rust-wasm-tests-helper = { workspace = true }
ozk-rust-wasm-tests-fib = { workspace = true }
ozk-rust-wasm-tests-add = { workspace = true }
wat = { workspace = true }
wasmprinter = { workspace = true }
expect-test = "1.0.1"
wasmtime = { workspace = true }
