[package]
name = "ozk-codegen-valida"
version = "0.1.0"
description = "Valida VM codegen for OmniZK"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
c2zk-ir = { workspace = true }
c2zk-ir-transform = { workspace = true }
c2zk-codegen-shared = { workspace = true }
ozk-valida-dialect = { workspace = true }
ozk-wasm-dialect = { workspace = true }
pliron = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
ozk-compiler = { workspace = true }
c2zk-codegen = { workspace = true }
c2zk-frontend = { workspace = true }
ozk-frontend-wasm = { workspace = true }
c2zk-rust-wasm-tests-helper = { workspace = true }
c2zk-rust-wasm-tests-bundle1 = { workspace = true }
pliron = { workspace = true }
wat = { workspace = true }
wasmprinter = { workspace = true }
expect-test = "1.0.1"
wasmtime = "7.0.0"
