[package]
name = "c2zk-codegen"
version = "0.1.0"
description = "codegen for c2zk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
c2zk-ir = { workspace = true }
c2zk-codegen-shared = { workspace = true }
c2zk-codegen-tritonvm = { workspace = true }
ozk-codegen-midenvm = { workspace = true }
ozk-wasm-dialect = { workspace = true }
pliron = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
