[package]
name = "c2zk-compiler"
version = "0.1.0"
description = "compiler for c2zk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
c2zk-codegen = { workspace = true }
c2zk-codegen-shared = { workspace = true }
c2zk-frontend = { workspace = true }
c2zk-frontend-shared = { workspace = true }
c2zk-ir = { workspace = true }
ozk-frontend-wasm = { workspace = true }
pliron = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
