[package]
name = "c2zk-frontend-shared"
version = "0.1.0"
description = "IR builder helper for c2zk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
c2zk-ir = { workspace = true }
# ozk-dialect = { workspace = true }
thiserror = { workspace = true }
c2zk-stdlib = { workspace = true }

[dev-dependencies]
