[package]
name = "ozk-frontend-wasm"
version = "0.1.0"
description = "Wasm dialect builder for OmniZK"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ozk-wasm-dialect = { workspace = true }
pliron = { workspace = true }
thiserror = { workspace = true }
c2zk-stdlib = { workspace = true }
wasmparser = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
