[package]
name = "c2zk-frontend"
version = "0.1.0"
description = "Frontend for c2zk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
c2zk-ir = { workspace = true }
ozk-frontend-wasm = { workspace = true }
ozk-wasm-dialect = { workspace = true }
c2zk-frontend-shared = { workspace = true }
pliron = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
