[package]
name = "c2zk-ir-transform"
version = "0.1.0"
description = "IR transformations for c2zk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
c2zk-ir = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
