[package]
name = "c2zk-ir-transform"
version = "0.1.0"
description = "IR transformations for c2zk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
c2zk-ir = { workspace = true }
c2zk-frontend-shared = { workspace = true }
ozk-ozk-dialect = { workspace = true }
ozk-wasm-dialect = { workspace = true }
ozk-miden-dialect = { workspace = true }
pliron = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
bounded-vec = { workspace = true }

[dev-dependencies]
