[package]
name = "ozk-ir-transform"
version = "0.1.0"
description = "IR transformations for ozk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ozk-frontend-wasm = { workspace = true }
ozk-ozk-dialect = { workspace = true }
ozk-wasm-dialect = { workspace = true }
ozk-miden-dialect = { workspace = true }
ozk-valida-dialect = { workspace = true }
pliron = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
bounded-vec = { workspace = true }
topological-sort = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ozk-frontend-wasm = { workspace = true }
expect-test = { workspace = true }
wat = { workspace = true }
