[package]
name = "c2zk-ir"
version = "0.1.0"
description = "IR for c2zk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
derive_more = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
