[package]
name = "c2zk-rust-wasm-tests-helper"
version = "0.1.0"
description = "Helper types, functions for Rust-to-Wasm tests"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
c2zk-stdlib = { workspace = true, features = ["std"] }
c2zk-rust-wasm-tests-fib = { workspace = true }
c2zk-rust-wasm-tests-add = { workspace = true }

[dev-dependencies]
