[package]
name = "ozk-rust-wasm-tests-helper"
version = "0.1.0"
description = "Helper types, functions for Rust-to-Wasm tests"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ozk-stdlib = { workspace = true, features = ["std"] }
ozk-rust-wasm-tests-fib = { workspace = true }
ozk-rust-wasm-tests-add = { workspace = true }

[dev-dependencies]
