[package]
name = "c2zk-stdlib"
version = "0.1.0"
description = "The standard library for the c2zk Rust programs"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lazy_static = { workspace = true }
spin = { workspace = true }

[dev-dependencies]
