[package]
name = "ozk-stdlib"
version = "0.1.0"
description = "The standard library for the ozk Rust programs"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lazy_static = { workspace = true }
spin = { workspace = true }

[features]
default = []

# The "std" feature enables use of libstd. 
std = []

[dev-dependencies]
