[package]
name = "c2zk-tritonvm"
version = "0.1.0"
description = "Triton VM backend for c2zk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
triton-vm = { path = "../../../triton-vm/triton-vm" }

[dev-dependencies]
