[package]
name = "c2zk-wasm"
version = "0.1.0"
description = "Translator from WebAssembly to c2zk IR"
authors.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
readme.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
c2zk-ir = { workspace = true }
wasmparser = { workspace = true }
itertools = "0.10.0"
log = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
wat = { workspace = true }
target-lexicon = { workspace = true }


