[package]
name = "wasm2trvm"
version = "0.1.0"
description = "WebAssembly to Triton VM compiler"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasmparser = { version = "0.92", features = ["deterministic"] }
triton-vm = { path = "../../../triton-vm/triton-vm" }

[dev-dependencies]
wat = "1"
wast = "47.0"
assert_matches = "1.5"
anyhow = "1.0"
