[package]
name = "wasm2zk-tritonvm"
version = "0.1.0"
description = "Triton VM backend for wasm2zk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasmparser = { version = "0.92", features = ["deterministic"] }
triton-vm = { path = "../../../triton-vm/triton-vm" }
derive_more = "0.99"
thiserror = "1.0"

[dev-dependencies]
