[package]
name = "wasm2zk-wasmparser"
version = "0.1.0"
description = "Wasm parser for wasm2zk"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasmparser = { version = "0.92", features = ["deterministic"] }
derive_more = "0.99"
thiserror = "1.0"

[dev-dependencies]
