[package]
name = "ozk-miden-dialect"
version = "0.1.0"
description = "Miden dialect(IR) for OmniZK"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ozk-ozk-dialect = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
pliron = { workspace = true }
intertrait = { workspace = true }
# Required by intertrait
linkme = { workspace = true }
indent = { workspace = true }
paste = { workspace = true }
inventory = { workspace = true }
winter-math = { version = "0.6", default-features = false }
apint = { workspace = true }


[dev-dependencies]
