[package]
name = "ozk-dialect"
version = "0.1.0"
description = "Dialect(IR) for OmniZK"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
derive_more = { workspace = true }
thiserror = { workspace = true }
pliron = { git = "https://github.com/greenhat/pliron" , rev = "56d39b8d1dc780d42dd03ae5e22bd3839843057c" }
intertrait = "0.2.2"
# Required by intertrait
linkme = "0.2"
winter-math = { version = "0.6", default-features = false }

[dev-dependencies]
