[package]
name = "ozk-ozk-dialect"
version = "0.1.0"
description = "Builtin dialect for OmniZK"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
winter-math = { version = "0.6", default-features = false }
derive_more = { workspace = true }
thiserror = { workspace = true }
pliron = { workspace = true }
intertrait = { workspace = true }
# Required by intertrait
linkme = { workspace = true }
paste = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
