[package]
name = "ozk-wasm-dialect"
version = "0.1.0"
description = "Wasm dialect(IR) for OmniZK"
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
derive_more = { workspace = true }
thiserror = { workspace = true }
pliron = { workspace = true }
intertrait = "0.2.2"
# Required by intertrait
linkme = "0.2"
indent = "0.1.1"

[dev-dependencies]
